Moved some text from milepael 6 to milepael 4

--- a/documentation/latex/preamble.tex
+++ b/documentation/latex/preamble.tex
@@ -66,6 +66,7 @@
     breakatwhitespace=true,
     columns=fullflexible,
     frame=single,
+    rulecolor=\color{ccBorder},
     commentstyle=\color{pgreen},
     keywordstyle=\color{pblue},
     stringstyle=\color{pred},
