Corrected aggregations in milepael 4

--- a/documentation/latex/rapport.tex
+++ b/documentation/latex/rapport.tex
@@ -2,11 +2,14 @@
 \input{preamble.tex}
 \begin{document}
 \title{Big Data - Prosjekt}
-\author{Gruppe 13: Mats Engelien 192288, Lars Erik Faber 193173 }
+\author{%
+    Gruppe 0013:\\
+    Mats Engelien, studentnr: 192288\\
+    Lars Erik Faber, studentnr: 193173}
 \date{}
 \maketitle
 \begin{center}
-    \includegraphics[width=\textwidth]{images/world_education.jpg}    
+    \includegraphics[scale=1]{images/world_education.jpg}    
 \end{center}
 \thispagestyle{empty}
 \newpage
