--- a/documentation/latex/sections/milepael3/documentDatabaseDesign.tex
+++ b/documentation/latex/sections/milepael3/documentDatabaseDesign.tex
@@ -1,8 +1,5 @@
 \subsection{Design Av Dokumentdatabase}
-Her brukte vi datasettet "Socio-Economic Country Pofiles" fra Kaggle:
-
-https://www.kaggle.com/nishanthsalian/socioeconomic-country-profiles
-
+Her brukte vi datasettet "Socio-Economic Country Pofiles" fra Kaggle.
 
 \textbf{Hvorfor kolonnedatabase?}
 
