--- a/documentation/latex/sections/milepael4/designGraphDB.tex
+++ b/documentation/latex/sections/milepael4/designGraphDB.tex
@@ -5,7 +5,7 @@ Her brukte vi datasettet "Government Types of the World".
 \subsubsection{Representasjon av nodene og relasjonene mellom de}
 \FigureCounter
 \begin{figure}[H]
-  \includegraphics[width=\textwidth]{images/milepael4/graph_database_base.drawio.png}
+  \includegraphics[scale=0.5]{images/milepael4/graph_database_base.drawio.png}
 \end{figure}
 
 \subsubsection{Hvorfor grafdatabase?}
@@ -13,15 +13,6 @@ Vi tenkte at grafdatabase er godt egnet for å se hvilke styringsmåter forskjel
 også en god oversikt over hvilke ledere som har styrt hvor, og eventuelt om de har styrt andre 
 steder. Siden det ikke er for omfattende informasjon om hver node, kan de lett lagres som 
 egenskaper. Det gjør det også lett å få oversikt på presteringen av hver leder og hvert land.
-
-\subsubsection{Operasjoner}
-
-\subsubsection{Hvordan eksisterende data oppdateres}
-I vår løsning for grafdatabaser lagres ikke komponentene direkte i databasen som objekter, men blir 
-heller laget via queries. Derfor er det ikke samme behov for et rådata-objekt for å oppdatere disse 
-komponenetene. Måten vi tenker at dette gjøres er at brukeren oppretter en ny node som skal 
-plottes inn i databasen. For eksempel, kan brukeren opprette en ny leder-node med tilhørende 
-properties, og det er denne som sendes til databasen.
 
 \subsubsection{Dataobjekter}
 % Aggregering 1 %
@@ -46,7 +37,7 @@ framstillingen brukes et linjediagram.
 
 \FigureCounter
 \begin{figure}[H]
-  \includegraphics[scale=1]{images/milepael4/regimeTypeDevelopment.png}
+  \includegraphics[scale=0.75]{images/milepael4/regimeTypeDevelopment.png}
 \end{figure}
 
 \textbf{Pseudo-Kode}
@@ -63,7 +54,7 @@ mest basert på antall Regimer og hvor lenge de har holdt på.
 
 \FigureCounter
 \begin{figure}[H]
-  \includegraphics[scale=1]{images/milepael4/mostInfluentialLeader.png}
+  \includegraphics[scale=0.75]{images/milepael4/mostInfluentialLeader.png}
 \end{figure}
 
 % Aggregering 4 %
@@ -73,7 +64,7 @@ Regjeringstypene.
 
 \FigureCounter
 \begin{figure}[H]
-  \includegraphics[scale=1]{images/milepael4/countryByRegimeCountWithRegime.png}
+  \includegraphics[scale=0.75]{images/milepael4/countryByRegimeCountWithRegime.png}
 \end{figure}
 
 \textbf{Pseudo-Kode}
@@ -82,3 +73,14 @@ Regjeringstypene.
   \item Sum Regime by Countries
   \item Group by countries
 \end{enumerate}
+
+\subsubsection{Operasjoner}
+
+
+
+\subsubsection{Hvordan eksisterende data oppdateres}
+I vår løsning for grafdatabaser lagres ikke komponentene direkte i databasen som objekter, men blir 
+heller laget via queries. Derfor er det ikke samme behov for et rådata-objekt for å oppdatere disse 
+komponenetene. Måten vi tenker at dette gjøres er at brukeren oppretter en ny node som skal 
+plottes inn i databasen. For eksempel, kan brukeren opprette en ny leder-node med tilhørende 
+properties, og det er denne som sendes til databasen.
