--- a/documentation/latex/sections/github.tex
+++ b/documentation/latex/sections/github.tex
@@ -1,4 +1,1 @@
-\paragraph{GitHub}
-repoet vårt er Public og finnes her. Den inneholder alle filer relatert til Big Data prosjektet.
-
-Lenke til GitHub: https://github.com/larseriktf/BigData
+\textbf{GitHub} repoet vårt er Public og finnes her: https://github.com/larseriktf/BigData
