--- a/documentation/latex/rapport.tex
+++ b/documentation/latex/rapport.tex
@@ -31,6 +31,8 @@
 \newpage
 \input{sections/milepael6/milepael6.tex}
 \newpage
+\input{sections/milepael7/milepael7.tex}
+\newpage
 \input{sections/reflection.tex}
 \newpage
 \input{sections/sources.tex}
