Added an extra reflection

--- a/documentation/latex/sections/reflection.tex
+++ b/documentation/latex/sections/reflection.tex
@@ -12,3 +12,5 @@ Vi gjorde ikke milepæl 7 til fristen, men her tok Mats ansvaret for å innføre
 
 \subsection{Hvordan har gruppearbeidet fungert}
 Gruppearbeit har fungert veldig bra. Begge to er gode venner og har god kommunikasjon med hverandre. Vi har også diskutert godt gjennom hele prosjektet og vært aktive i kurset. Det eneste å påpeke er at vi har vært litt sent ute med å begynne på hver milepæl, slik at annenhver helg går til Big Data.
+
+Vi merker også at det ble lite tid til å gjøre oss helt ferdige med den endelige innleveringen. Derfor kan det hende at enkelte steder i rapporten virker det uferdig. Det er et resultat av mye endringer mellom hver oblig, slik at det ble veldig mye å skrive om til slutt. 
